--- a/krushi_yojna.html
+++ b/krushi_yojna.html
@@ -40,73 +40,95 @@
                     <li>
                         <h3>Pradhan Mantri Fasal Bima Yojana (PMFBY)</h3>
                         <p>This scheme provides insurance cover to farmers against crop failure caused by natural calamities, pests, and diseases. It aims to stabilize farmers' income and safeguard them from the risks associated with farming.</p>
+                        <h4>Link to the official Website : </h4>
+                        <a href="https://pmfby.gov.in/" target="_blank">Pradhan Mantri Fasal Bima Yojana </a>
                     </li>
 
                     <!-- Scheme 2 -->
                     <li>
                         <h3>Pradhan Mantri Krishi Sinchai Yojana (PMKSY)</h3>
                         <p>PMKSY focuses on enhancing irrigation facilities to ensure that every farm gets access to adequate water resources. The scheme promotes efficient water use and aims to achieve 'Har Khet Ko Pani' (Water for Every Field).</p>
+                        <h4>Link to the official Website : </h4>
+                        <a href="https://pmksy.gov.in/" target="_blank">Pradhan Mantri Krishi Sinchai Yojana</a>
                     </li>
 
                     <!-- Scheme 3 -->
                     <li>
                         <h3>Soil Health Management (SHM)</h3>
                         <p>This scheme promotes soil health and fertility through the provision of soil testing services and the application of appropriate soil management practices. It helps farmers improve crop yield and sustainability.</p>
+                        <h4>Link to the official Website : </h4>
+                        <a href="https://www.india.gov.in/website-soil-health-management" target="_blank">Soil Health Management </a>
                     </li>
 
                     <!-- Scheme 4 -->
                     <li>
                         <h3>National Agricultural Market (eNAM)</h3>
                         <p>eNAM is an online trading platform that facilitates the sale of agricultural produce directly to buyers. It aims to provide better price discovery, eliminate middlemen, and improve market efficiency.</p>
+                        <h4>Link to the official Website : </h4>
+                        <a href="https://www.enam.gov.in/web/" target="_blank">National Agricultural Market </a>
                     </li>
 
                     <!-- Scheme 5 -->
                     <li>
                         <h3>Krishi Vigyan Kendra (KVK)</h3>
                         <p>KVKs offer training and technical support to farmers on modern agricultural practices, crop management, and pest control. They serve as a bridge between research institutions and farmers.</p>
+                        <h4>Link to the official Website : </h4>
+                        <a href="https://kvk.icar.gov.in/" target="_blank">Krishi Vigyan Kendra </a>
                     </li>
 
                     <!-- Scheme 6 -->
                     <li>
                         <h3>Deen Dayal Upadhyaya Grameen Kaushalya Yojana (DDU-GKY)</h3>
                         <p>This scheme provides skill development training to rural youth, including farmers, to enhance their employability and income-generating capabilities. It focuses on improving the overall quality of life in rural areas.</p>
+                        <h4>Link to the official Website : </h4>
+                        <a href="https://www.xn--i1bj3fqcyde.xn--11b7cb3a6a.xn--h2brj9c/spotlight/%E0%A4%A6%E0%A5%80%E0%A4%A8-%E0%A4%A6%E0%A4%AF%E0%A4%BE%E0%A4%B2-%E0%A4%89%E0%A4%AA%E0%A4%BE%E0%A4%A7%E0%A5%8D%E0%A4%AF%E0%A4%BE%E0%A4%AF-%E0%A4%97%E0%A5%8D%E0%A4%B0%E0%A4%BE%E0%A4%AE%E0%A5%80%E0%A4%A3-%E0%A4%95%E0%A5%8C%E0%A4%B6%E0%A4%B2%E0%A5%8D%E0%A4%AF-%E0%A4%AF%E0%A5%8B%E0%A4%9C%E0%A4%A8%E0%A4%BE#:~:text=%E0%A4%A6%E0%A5%80%E0%A4%A8%20%E0%A4%A6%E0%A4%AF%E0%A4%BE%E0%A4%B2%20%E0%A4%89%E0%A4%AA%E0%A4%BE%E0%A4%A7%E0%A5%8D%E0%A4%AF%E0%A4%BE%E0%A4%AF%20%E0%A4%97%E0%A5%8D%E0%A4%B0%E0%A4%BE%E0%A4%AE%E0%A5%80%E0%A4%A3%20%E0%A4%95%E0%A5%8C%E0%A4%B6%E0%A4%B2%E0%A5%8D%E0%A4%AF%20%E0%A4%AF%E0%A5%8B%E0%A4%9C%E0%A4%A8%E0%A4%BE%20(%E0%A4%A1%E0%A5%80%E0%A4%A1%E0%A5%80%E0%A4%AF%E0%A5%82%2D%E0%A4%9C%E0%A5%80%E0%A4%95%E0%A5%87%E0%A4%B5%E0%A4%BE%E0%A4%88)%20%E0%A4%97%E0%A4%B0%E0%A5%80%E0%A4%AC,%E0%A4%AA%E0%A4%B9%E0%A4%B2%E0%A5%8B%E0%A4%82%20%E0%A4%AE%E0%A5%87%E0%A4%82%20%E0%A4%B8%E0%A5%87%20%E0%A4%8F%E0%A4%95%20%E0%A4%B9%E0%A5%88%E0%A5%A4" target="_blank">Deen Dayal Upadhyaya Grameen Kaushalya Yojana</a>
                     </li>
 
                     <!-- Scheme 7 -->
                     <li>
                         <h3>Rural Infrastructure Development Fund (RIDF)</h3>
                         <p>RIDF supports the creation and improvement of rural infrastructure, including irrigation, roads, and market yards. It aims to enhance rural connectivity and agricultural productivity.</p>
+                        <h4>Link to the official Website : </h4>
+                        <a href="https://www.nabard.org/content1.aspx?id=573&catid=8&mid=8" target="_blank">Rural Infrastructure Development Fund</a>
                     </li>
 
                     <!-- Scheme 8 -->
                     <li>
                         <h3>Pradhan Mantri Jan Dhan Yojana (PMJDY)</h3>
                         <p>PMJDY aims to provide financial inclusion to every household, including farmers, by opening bank accounts and providing access to credit and insurance services. It helps in improving financial stability and accessibility.</p>
+                        <h4>Link to the official Website : </h4>
+                        <a href="https://pmjdy.gov.in/" target="_blank">Pradhan Mantri Jan Dhan Yojana</a>
                     </li>
 
                     <!-- Scheme 9 -->
                     <li>
                         <h3>National Food Security Mission (NFSM)</h3>
                         <p>NFSM aims to enhance food grain production, particularly for rice, wheat, and pulses, through improved agricultural practices and technology adoption. It focuses on increasing productivity and ensuring food security.</p>
+                        <h4>Link to the official Website : </h4>
+                        <a href="https://www.nfsm.gov.in/" target="_blank">National Food Security Mission</a>
                     </li>
 
                     <!-- Scheme 10 -->
                     <li>
                         <h3>Integrated Nutrient Management (INM)</h3>
                         <p>INM promotes balanced and efficient use of fertilizers and organic inputs to improve soil fertility and crop productivity. It helps farmers adopt sustainable agricultural practices.</p>
+                        <h4>Link to the official Website : </h4>
+                        <a href="https://agritech.tnau.ac.in/agriculture/agri_nutrientmgt_integrntrientmgt.html" target="_blank">Integrated Nutrient Management</a>
                     </li>
 
                     <!-- Scheme 11 -->
                     <li>
                         <h3>Atal Pension Yojana (APY)</h3>
                         <p>APY provides a pension scheme for farmers and other workers in the unorganized sector. It ensures financial security post-retirement through regular pension payments.</p>
+                        <h4>Link to the official Website : </h4>
+                        <a href="https://www.npscra.nsdl.co.in/scheme-details.php" target="_blank">Atal yojna</a>
                     </li>
 
                     <!-- Scheme 12 -->
                     <li>
                         <h3>Mahatma Gandhi National Rural Employment Guarantee Act (MGNREGA)</h3>
                         <p>MGNREGA guarantees 100 days of wage employment in a financial year to rural households. It focuses on enhancing livelihood security by creating sustainable rural assets, including those related to agriculture.</p>
-                        <h4>Link to the official Website :- </h4>
+                        <h4>Link to the official Website : </h4>
                         <a href="https://haryanarural.gov.in/mahatma-gandhi-national-rural-employment-guarantee-scheme-mgnregs/#:~:text=The%20Government%20of%20India%20passed,to%20do%20unskilled%20manual%20work." target="_blank">MANREGA</a>
                     </li>
                 </ul>
