--- a/community_support.html
+++ b/community_support.html
@@ -140,6 +140,7 @@
             </div>
         </section>
     </main>
+    <button onclick="scrollToTop()" id="scrollBtn" title="Go to top">↑</button>
 
     <!-- Footer Section -->
     <footer>
@@ -147,5 +148,6 @@
             <p>&copy; 2024 Krusi's Community. All Rights Reserved.</p>
         </div>
     </footer>
+    <script src="community_support.js"></script>
 </body>
 </html>
