--- a/contact_us.html
+++ b/contact_us.html
@@ -43,10 +43,10 @@
     </main>
     <H3 CLASS=""FUN>
     OUR DETAILS:-</H3>
-    <H5 CLASS="FUN">JAINAM KHETANI :- jainamkhetani@gmail.com<br>
-    RASHIYA OM :- rashiyaom@gmail.com<br>
-    KRISH ARDERSHANA :-krishardeshana@gmail.com<br>
-    KRISH VORA :-krishvora493@gmail.com</H5>
+    <H5 CLASS="FUN">Jainam Khetani :- jainamkhetani@gmail.com<br>
+    Harshil Maru :- maruharshil82@gmail.com<br>
+    Kunj Desai :- kunjdesai487@gmail.com<br>
+    Jash Joshi :- jashjoshi84@gmail.com</H5>
     <footer>
         <div class="container">
             <p>&copy; 2024 Krushi Kram. All Rights Reserved.</p>
