--- a/krushi_yojna.html
+++ b/krushi_yojna.html
@@ -135,12 +135,14 @@
             </div>
         </section>
     </main>
-
+    <button onclick="scrollToTop()" id="scrollBtn" title="Go to top">↑</button>
+    
     <!-- Footer Section -->
     <footer>
         <div class="container">
             <p>&copy; 2024 Krushi's Yojna. All Rights Reserved.</p>
         </div>
     </footer>
+    <script src="krushi_yojna.js"></script>
 </body>
 </html>
