--- a/market_insights.html
+++ b/market_insights.html
@@ -155,7 +155,8 @@
                         <a href="#" class="read-more">Read More</a>
                     </div>
                 </article>
-
+                <button onclick="scrollToTop()" id="scrollBtn" title="Go to top">↑</button>
+                <script src="market_insights.js"></script>
                 <footer>
                     <p>&copy; 2024 Krushi's Market. All rights reserved.</p>
                 </footer>
