remove scroll bar

--- a/Machine_Rental.html
+++ b/Machine_Rental.html
@@ -40,7 +40,7 @@
             <input type="number" id="plough-days" min="1" value="1">
             <button onclick="calculateTotal('plough', 1500)">Rent</button>
         </div>
-        <div class="machine">
+        <!-- <div class="machine">
             <img src="https://thumbs.dreamstime.com/b/modern-case-tractor-drilling-seed-field-vaderstad-drill-red-pulling-planting-new-front-hopper-combi-vadersad-fh-tempo-v-70255814.jpg?w=768" alt="Seed Drill">
             <h2>Seed Drill</h2>
             <p>Price: ₹2500 per day</p>
@@ -48,7 +48,7 @@
             <label for="seed-drill-days">Days:</label>
             <input type="number" id="seed-drill-days" min="1" value="1">
             <button onclick="calculateTotal('seed-drill', 2500)">Rent</button>
-        </div>
+        </div> -->
         <div class="machine">
             <img src="https://www.deere.com/assets/images/common/our-company/news/agriculture/2021mar02-john-deere-launches-see-and-spray-select-1-1366x768.jpg" alt="Sprayer">
             <h2>Sprayer</h2>
