--- a/ecom.html
+++ b/ecom.html
@@ -61,7 +61,7 @@
                     <div class="product-card">
                         
                         <div class="product-info">
-                            <img src="https://m.media-amazon.com/images/I/61T+w09yIyL.AC_UF894,1000_QL80.jpg" alt="Apple">
+                            <img src="https://i.imghippo.com/files/gWNm1633rK.jpg" alt="Apple">
                             <h3>Apple</h3>
                             <p class="price">Rs.100</p>
                             
