--- a/Krushi_bot.html
+++ b/Krushi_bot.html
@@ -7,12 +7,11 @@
     <title>Document</title>
 </head>
 <body>
-    https://app.fastbots.ai/embed/clznrrttn000mr9bg21cp2xf2
-    <script defer src="https://app.fastbots.ai/embed.js" data-bot-id="clznrrttn000mr9bg21cp2xf2"></script>
-<iframe	style="width: 400px; height: 600px;" src="https://app.fastbots.ai/embed/clznrrttn000mr9bg21cp2xf2"></iframe>
+    <!-- Embedding chatbot using script -->
+    <script defer src="https://app.fastbots.ai/embed.js" data-bot-id="cm7q71wwz11hdrik5rxeeobym"></script>
+    
+    <footer>
+        <p>&copy; 2024 Krushi Kram. All rights reserved.</p>
+    </footer>
 </body>
-<footer>
-    <p>&copy; 2024 Krushi Kram. All rights reserved.</p>
-</footer>
 </html>
-
