--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
                 <p>Stronger community of Krushi's will eventually help in building a stronger nation.</p>
             </div>
             <div class="product-item">
-                <h4><a href="Krushi_bot.html">Krushi's AI bot</a></h4>
-                <p>Krushi's AI chat bot communicates with you and helps you solve your problems.</p>
+                <h4><a href="trade.html">Krushi Bazzar</a></h4>
+                <p>Trade at the best competetive price.</p>
             </div>
              <div class="product-item">
                 <h4><a href="krushi_khoj.html">Krushi Khoj</a></h4>
@@ -74,7 +74,7 @@
            
         </div>
     </section>
-
+    <script src="script.js"></script>
     <footer>
         <p>&copy; 2024 Krushi Kram. All rights reserved.</p>
     </footer>
