--- a/index.html
+++ b/index.html
@@ -71,6 +71,11 @@
                 <h4><a href="Machine_Rental.html">Machine Rental</a></h4>
                 <p>Rent high value machines for affordable price only at Krushi-Kram</p>
             </div>
+            <div class="product-item">
+                <h4><a href="https://teachablemachine.withgoogle.com/models/om1Gf3vod/">Crop Detection AI</a></h4>
+                <p>Empowering agriculture with smart image-based crop detection.</p>
+            </div>
+
            
         </div>
     </section>
